# TP-laboratories

lab06_2025-1/: CMakeLists.txt  main.cpp
lab06_2025-2/: CMakeLists.txt  main.cpp
lab07_2025-2/: CMakeLists.txt  main.cpp
lab07_2026-1/: CMakeLists.txt  main.cpp
lab09_2025-2/: CMakeLists.txt  main.cpp
lab10_2026-1/: CMakeLists.txt  main.cpp
test_exercise/: CMakeLists.txt  main.cpp
test_exercise-bank/: CMakeLists.txt  main.cpp
test_exercise-rappi/: CMakeLists.txt  main.cpp
